--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body {
   background-color: white;
   font-family: "Helvetica", sans-serif;
   margin: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 header {
