--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,6 @@ body {
   background-color: white;
   font-family: "Helvetica", sans-serif;
   margin: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
 }
 
 header {
@@ -64,8 +62,9 @@ nav a {
 }
 
 #profile-section {
-  margin-right: 100px;
-  margin-left: 100px;
+  margin-right: 60px;
+  margin-left: 60px;
+  margin-bottom: 30px;
 }
 
 #profile-section > section {
