--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,8 @@ nav a {
 .profile-image {
   max-width: 100%;
   border-radius: 50%;
-  height: 200px;
+  height: 250px;
+  width: 250px;
   box-sizing: border-box;
 }
 
