--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ nav a {
 .display-flex {
   position: fixed;
   justify-content: space-between;
+  z-index: 100;
 }
 
 header, .display-flex, .image-container, #profile-section li, #profile-section {
