--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
 }
 
 header {
+  margin-top: 80px;
   height: 300px;
   background-image: url("../img/headerimage.jpg");
   background-size: cover;
@@ -19,17 +20,6 @@ header {
 img {
   width: 450px;
   height: auto;
-}
-
-.image-container {
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: space-evenly;
-}
-
-.image-box {
-  flex: 1;
-  max-width: 450px;
 }
 
 .h1-header {
@@ -80,12 +70,15 @@ nav a {
 }
 
 .display-flex {
+  top: 0;
+  right: 20px;
+  background-color: white;
   position: fixed;
   justify-content: space-between;
   z-index: 100;
 }
 
-header, .display-flex, .image-container, #profile-section li, #profile-section {
+header, .display-flex, #profile-section li, #profile-section {
   display: flex;
 }
 
