--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ nav a {
 .display-flex {
   top: 0;
   right: 20px;
+  width: 100%;
   background-color: white;
   position: fixed;
   justify-content: space-between;
