--- a/css/styles.css
+++ b/css/styles.css
@@ -28,27 +28,22 @@ img {
 }
 
 nav {
-  margin-inline: 0px;
-  margin-block: 19.92px;
-  float: right;
-  list-style-type: none;
+  margin-left: auto;
+  margin-right: 16px;
 }
 
-nav ul {
-  margin: 0px;
-}
-
-nav li {
-  display: inline;
+#navbar a {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  color: black;
+  text-decoration: none;
   font-family: 'Oswald', sans-serif;
 }
 
-nav li:last-child {
-  margin-right: 0;
-}
-
-nav a {
-  text-decoration: none;
+#navbar a:hover {
+  background-color: #f2f2f2;
 }
 
 #profile-section {
@@ -69,21 +64,20 @@ nav a {
   box-sizing: border-box;
 }
 
-.display-flex {
+#nav-bar {
+  overflow: hidden;
+  position: fixed;
   top: 0;
-  right: 20px;
   width: 100%;
   background-color: white;
-  position: fixed;
-  justify-content: space-between;
-  z-index: 100;
-}
-
-header, .display-flex, #profile-section li, #profile-section {
   display: flex;
 }
 
-#profile-section, header, .display-flex {
+header, #profile-section li, #profile-section {
+  display: flex;
+}
+
+#profile-section, header {
   align-items: center;
 }
 
@@ -132,7 +126,7 @@ span.fas.fa-graduation-cap {
   margin-bottom: 20px;
 }
 
-nav li, .controls * {
+.controls * {
   margin-right: 10px;
 }
 
