--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  margin-top: 80px;
+  margin-top: 50px;
   height: 300px;
   background-image: url("../img/headerimage.jpg");
   background-size: cover;
@@ -22,6 +22,10 @@ img {
   height: auto;
 }
 
+h1 {
+  margin: 20px;
+}
+
 .h1-header {
   color: white;
   font-family: 'Exo 2', sans-serif;
@@ -29,14 +33,14 @@ img {
 
 nav {
   margin-left: auto;
-  margin-right: 16px;
+  margin-right: 30px;
 }
 
 nav a {
   float: left;
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 10px;
   color: black;
   text-decoration: none;
   font-family: 'Oswald', sans-serif;
