--- a/css/gallary.css
+++ b/css/gallary.css
@@ -6,6 +6,7 @@ body {
 }
 
 header {
+  margin-top: 50px;
   height: 300px;
   background-image: url("../img/headerimage.jpg");
   background-size: cover;
@@ -36,34 +37,33 @@ img {
   max-width: 450px;
 }
 
+h1 {
+  margin: 20px;
+  margin-left: 0px;
+}
+
 .h1-header {
   color: white;
   font-family: 'Exo 2', sans-serif;
 }
 
 nav {
-  margin-inline: 0px;
-  margin-block: 19.92px;
-  float: right;
-  list-style-type: none;
-}
-
-nav ul {
-  margin: 0px;
-}
-
-nav li {
-  display: inline;
-  margin-right: 10px;
-  font-family: 'Oswald', sans-serif;
-}
-
-nav li:last-child {
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: 30px;
 }
 
 nav a {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 20px 10px;
+  color: black;
   text-decoration: none;
+  font-family: 'Oswald', sans-serif;
+}
+
+nav a:hover {
+  background-color: #f2f2f2;
 }
 
 .profile-section {
@@ -76,15 +76,20 @@ nav a {
   border-radius: 50%;
 }
 
-.display-flex {
-  justify-content: space-between;
-}
-
-header, .display-flex, .image-container, .profile-section {
+#nav-bar {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
   display: flex;
 }
 
-header, .display-flex, .profile-section {
+header, .image-container, .profile-section {
+  display: flex;
+}
+
+header, .profile-section {
   align-items: center;
 }
 
