--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,54 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
+header {
+    margin-top: 50px;
+    height: 300px;
+    background-image: url("../img/headerimage.jpg");
+    background-size: cover;
+    background-position: center center;
+    justify-content: center;
+}
+
+h1 {
+    margin: 20px;
+    margin-left: 0px;
+}
+
+.h1-header {
+    color: white;
+    font-family: 'Exo 2', sans-serif;
+}
+
+nav {
+    margin-left: auto;
+    margin-right: 30px;
+}
+
+nav a {
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 20px 10px;
+    color: black;
+    text-decoration: none;
+    font-family: 'Oswald', sans-serif;
+}
+
+nav a:hover {
+    background-color: #f2f2f2;
+}
+
+#nav-bar {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+}
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
@@ -39,8 +87,8 @@ footer {
     font-size: .8em;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
+ul.posts {
+    margin: 20px auto 40px;
     font-size: 1.5em;
 }
 
@@ -48,11 +96,11 @@ ul.posts li {
     list-style: none;
 }
 
-.image{ 
-        margin-top: 10px; 
-        width:200px; 
-        height:200px; 
-        border-radius:200px; 
+.image{
+        margin-top: 10px;
+        width:200px;
+        height:200px;
+        border-radius:200px;
 }
 
 /* CSS property for content section */
