--- a/css/common.css
+++ b/css/common.css
@@ -58,70 +58,6 @@ nav a:hover {
   margin-bottom: 30px;
 }
 
-nav ul, footer ul {
-  font-family:'Helvetica', 'Arial', 'Sans-Serif';
-  padding: 0px;
-  list-style: none;
-  font-weight: bold;
-}
-nav ul li, footer ul li {
-  display: inline;
-  margin-right: 20px;
-}
-a {
-  text-decoration: none;
-  color: #999;
-}
-a:hover {
-  text-decoration: underline;
-}
-h1 {
-  font-size: 2.5em;
-  font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-  font-size: 1.5em;
-  line-height: 1.4em;
-  color: #333;
-}
-p1 {
-  font-size: 1.25em;
-  line-height: 1.4em;
-  color: #333;
-  font-weight: bold;
-}
-
-ul.posts {
-  margin: 20px auto 40px;
-  font-size: 1.5em;
-}
-
-ul.posts li {
-  list-style: none;
-}
-
-.image{
-      margin-top: 10px;
-      width:200px;
-      height:200px;
-      border-radius:200px;
-}
-
-/* CSS property for content section */
-.columnA {
-  float: left;
-  width: 300px;
-  /*padding: 15px;*/
-  height:500px;
-  text-align:center;
-}
-.columnB {
-  margin-left: 300px;
-  /*padding: 15px;*/
-  height:500px;
-  text-align:justify;
-}
-h2 {
-  color:green;
-  text-align:center;
+.centered {
+  text-align: center;
 }
