--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,8 @@ header {
   background-size: cover;
   background-position: center center;
   justify-content: center;
+  display: flex;
+  align-items: center;
 }
 
 h1 {
@@ -53,6 +55,7 @@ nav a:hover {
 }
 
 .container {
+  margin-top: 20px;
   margin-right: 60px;
   margin-left: 60px;
   margin-bottom: 30px;
