--- a/css/common.css
+++ b/css/common.css
@@ -74,6 +74,8 @@ nav a:hover {
   display: flex;
   justify-content: space-between; /* This will space the items evenly */
   align-items: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .position-title {
