--- a/css/common.css
+++ b/css/common.css
@@ -55,9 +55,9 @@ nav a:hover {
 }
 
 .container {
-  margin-top: 20px;
-  margin-right: 75px;
-  margin-left: 75px;
+  margin-top: 40px;
+  margin-right: 105px;
+  margin-left: 105px;
   margin-bottom: 30px;
 }
 
@@ -78,7 +78,7 @@ nav a:hover {
   margin-bottom: 5px;
 }
 
-.position-title {
+.position-title, .course-name {
   flex: 1.5;
   justify-content: flex-start;
 }
@@ -88,7 +88,11 @@ nav a:hover {
   text-align: center;
 }
 
-.location {
+.location, .time {
   text-align: right;
+}
+
+.course-name, .time {
+  font-size: 16px;
 }
 
