--- a/css/common.css
+++ b/css/common.css
@@ -128,3 +128,14 @@ nav a:hover {
 #learnMoreBtn:hover {
   background-color: #45a049; /* Darker green on hover */
 }
+
+body.flex-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* This ensures it takes the full viewport height */
+}
+
+.container {
+  flex: 1;
+  /* This allows the container to grow and push the footer down */
+}
