--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,15 @@ header {
   justify-content: center;
 }
 
+h1, h2, h3 {
+  font-weight: bold;
+  margin: 0;
+}
+
+h3 {
+  margin-bottom: 15px;
+}
+
 .justified {
   text-align: justify;
 }
@@ -185,4 +194,27 @@ body, #schedule, .has-text, td {
 }
 .column {
   width: 45%;
+  text-align: left;
 }
+
+.column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.column ul li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  font-size: 1.1em;
+}
+
+.column ul li span {
+  margin-right: 15px;
+  font-size: 1.5em;
+}
+
+.column h3 {
+  margin-bottom: 20px;
+}
+
