--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,10 @@ span.fas.fa-graduation-cap {
   margin-right: 20px;
 }
 
+span.fa-solid.fa-robot {
+  margin-right: 20px;
+}
+
 .profile-image {
   margin-right: 50px;
 }
