--- a/css/styles.css
+++ b/css/styles.css
@@ -105,10 +105,12 @@ header, #profile-section li, #profile-section {
 
 .fas.fa-graduation-cap {
   font-size: 26.4px;
+  margin-right: 15px;
 }
 
 .fa-solid.fa-robot {
   font-size: 26.4px;
+  margin-right: 15px;
 }
 
 .profile-image {
