--- a/css/styles.css
+++ b/css/styles.css
@@ -144,9 +144,17 @@ header, #profile-section li, #profile-section {
 .shaded {
   background-color: grey;
 }
-
+li span {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  font-size: 26px;
+  text-align: center;
+  line-height: 26px;
+  margin-right: 15px;
+}
 .details-container {
-  display: block;
+  display: inline-block;
 }
 
 .centered {
