--- a/css/styles.css
+++ b/css/styles.css
@@ -79,13 +79,13 @@ nav a:hover {
   gap: 20px;
 }
 
-.about {
+#about {
   flex: 0 0 70%;
   display: flex;
   flex-direction: column;
 }
 
-.profile-image {
+#profile-image {
   flex: 0 0 30%;
   max-width: 100%;
   border-radius: 50%;
