--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ nav a:hover {
   flex-direction: column;
 }
 
-#profile-image {
+.profile-image {
   flex: 0 0 30%;
   max-width: 100%;
   border-radius: 50%;
