--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ nav a:hover {
   display: flex; /* Center the image inside the container if needed */
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .profile-image {
@@ -198,3 +199,9 @@ body, td {
   line-height: 1.5;
 }
 
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
