--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,11 @@ div#profile {
 
 .name {
   font-size: 2.5em;
-  font-family: "Roboto", serif;
-  font-weight: 300;
+  font-family: "Encode Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
   margin: 10px 0;
 }
