--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ div#profile {
   color: inherit;
 }
 
-.name {
+.name, div#about h1 {
   font-size: 2.5em;
   font-family: "Encode Sans", sans-serif;
   font-optical-sizing: auto;
