--- a/css/styles.css
+++ b/css/styles.css
@@ -241,14 +241,25 @@ div#profile {
 
 /* Timeline container styling */
 .timeline-container {
-  display: grid;
-  grid-template-columns: 40px 1fr; /* Timeline and cards side-by-side */
+  display: flex;
+  flex-direction: column; /* Timeline and cards side-by-side */
   gap: 20px;
-  width: 100%;
-  max-width: 1200px;
+  border-left: 5px solid #1a73e8;
 }
 
-/* Timeline column */
+.teaching-card::before {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: 2px solid #1a73e8;
+  margin: 0 auto;
+  background-color: #1a73e8;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* Timeline column
 .timeline {
   display: flex;
   flex-direction: column;
@@ -264,9 +275,9 @@ div#profile {
   top: 0;
   left: 50%;
   z-index: -1;
-}
+}*/
 
-.timeline-item {
+/*.timeline-item {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -280,34 +291,23 @@ div#profile {
   border-radius: 50%;
   border: 2px solid #1a73e8;
   margin: 0 auto;
-  background-color: #1a73e8; /* Filled by default */
+  background-color: #1a73e8; // Filled by default
   position: relative;
-  top: 50%; /* Center-aligns the circle */
+  top: 50%; // Center-aligns the circle
   transform: translateY(-50%);
 }
 
 .circle.hollow {
-  background-color: transparent; /* Makes the circle hollow */
+  background-color: transparent; // Makes the circle hollow
 }
 
 .line {
   width: 2px;
-  height: calc(100% - 12px); /* Dynamic height to connect circles */
+  height: calc(100% - 12px); // Dynamic height to connect circles
   background-color: #1a73e8;
   position: absolute;
-  top: 6px; /* Adjusted to start at the bottom of the first circle */
-}
-
-/* Teaching cards */
-/*.teaching-card {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  background-color: #ffffff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  position: relative;
-}*/
+  top: 6px; // Adjusted to start at the bottom of the first circle
+} */
 
 .teaching-card {
   display: flex;
