--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,7 @@ div#profile {
   justify-content: center;
   padding: 15px 50px;
   gap: 35px;
+  background-color: #c7ced8;
 }
 
 .email, .position, .university {
