--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ div#profile {
   color: inherit;
 }
 
-.name, div#about h1, div#teaching h2 {
+.name, div#about h1, section#teaching h2 {
   font-size: 2.5em;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
@@ -206,8 +206,8 @@ div#profile {
   justify-content: center;
   padding-left: 50px;
   padding-right: 50px;
-  padding-top: 55px;
-  padding-bottom: 35px;
+  padding-top: 80px;
+  padding-bottom: 60px;
   gap: 35px;
   background-color: #edededa3;
 }
