--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@ body {
   background-color: white;
   font-family: "Helvetica", sans-serif;
   margin: 0px;
+  scroll-behavior: smooth;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 h1, h2, h3 {
@@ -54,6 +59,10 @@ nav a {
 
 nav a:hover {
   background-color: #f2f2f2;
+}
+
+.active {
+  background: #f2f2f2;
 }
 
 #profile-section {
